Fixed the posts wrapping poorly on the homepage

--- a/sass/modules/_post.scss
+++ b/sass/modules/_post.scss
@@ -68,6 +68,7 @@
       margin: 0 20px 0 0;
 
       float: left;
+      clear: none;
 
       // Post Wrapper: Full Post
       &.post--full {
